force-app/main/default/objects/Payment_Term__c/fields/Default_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Terms__c</fullName>
    <label>Default Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>