force-app/main/default/objects/Payment_Term__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipLabel>Payment Terms</relationshipLabel>
    <relationshipName>Payment_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>